# fraud-investigation-env

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
baseline/: inference.py  prompts.py
scripts/: run_baseline.sh  validate.sh
server/: app.py
src/: __init__.py  environment.py  models.py  reward_engine.py  server.py  state_manager.py
src/data/: __init__.py  generator.py  scenarios.py
src/graders/: __init__.py  base_grader.py  grader_easy.py  grader_hard.py  grader_medium.py
src/ml/: __init__.py  anomaly_scorer.py  embedder.py  feature_extractor.py
src/tasks/: __init__.py  base_task.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_endpoints.py  test_environment.py  test_graders.py  test_models.py  test_reward.py
