[project]
name = "fraud-investigation-env"
version = "1.0.0"
description = "OpenEnv environment for financial fraud investigation"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "pydantic==2.9.0",
    "httpx==0.27.0",
    "openai>=2.7.2",
    "huggingface-hub>=0.25.0",
    "sentence-transformers>=3.1.0",
    "numpy>=2.0.0",
    "python-dotenv==1.0.0",
    "pytest>=7.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"